[styles] fix post-body scrollbar not hiding

--- a/css/styles.css
+++ b/css/styles.css
@@ -477,7 +477,7 @@ body.home-view .label-all-container, body.search-view .label-all-container, body
     object-fit: cover;
 }
 .post-body {
-    overflow-x: scroll;
+    overflow-x: auto;
 }
 
 .comment-body {
